--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,3 +67,9 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# Mailer:
+smtp.host=smtp.gmail.com
+smtp.port=587
+smtp.ssl=yes
+smtp.user=${HiHoops_Email}
+smtp.password=${HiHoops_Email_Password}
