Finishing my Branch

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -71,5 +71,5 @@ logger.application=DEBUG
 smtp.host=smtp.gmail.com
 smtp.port=587
 smtp.ssl=yes
-smtp.user=${HiHoops_Email}
-smtp.password=${HiHoops_Email_Password}
+#smtp.user=${HiHoops_Email}
+#smtp.password=${HiHoops_Email_Password}
