removed unnecessary annotation in User and Court models

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -72,5 +72,7 @@ logger.application=DEBUG
 smtp.host=smtp.gmail.com
 smtp.port=587
 smtp.ssl=yes
-smtp.user=${HiHoops_Email}
-smtp.password=${HiHoops_Email_Password}
+smtp.user=user
+smtp.password=password
+#smtp.user=${HiHoops_Email}
+#smtp.password=${HiHoops_Email_Password}
