--- a/conf/application.conf
+++ b/conf/application.conf
@@ -72,7 +72,5 @@ logger.application=DEBUG
 smtp.host=smtp.gmail.com
 smtp.port=587
 smtp.ssl=yes
-smtp.user=user
-smtp.password=password
-#smtp.user=${HiHoops_Email}
-#smtp.password=${HiHoops_Email_Password}
+smtp.user=${HiHoops_Email}
+smtp.password=${HiHoops_Email_Password}
