--- a/conf/application.conf
+++ b/conf/application.conf
@@ -68,9 +68,14 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+#hihoops.admin.email = "admin"
+#hihoops.admin.password = "password"
+hihoops.admin.email = ${?HIHOOPS_ADMIN_EMAIL}
+hihoops.admin.password = ${?HIHOOPS_ADMIN_PASSWORD}
+
 # Mailer:
 smtp.host=smtp.gmail.com
 smtp.port=587
 smtp.ssl=yes
-smtp.user=${HiHoops_Email}
-smtp.password=${HiHoops_Email_Password}
+smtp.user= ${?HIHOOPS_EMAIL}
+smtp.password= ${?HIHOOPS_PASSWORD}
