--- a/conf/application.conf
+++ b/conf/application.conf
@@ -80,5 +80,5 @@ hihoops.admin.password = ${?HIHOOPS_ADMIN_PASSWORD}
 # Mailer:
 smtp.host=smtp.gmail.com
 smtp.port=587
-smtp.user=${HiHoops_Email}
-smtp.password=${HiHoops_Email_Password}
+smtp.user=${?HiHoops_Email}
+smtp.password=${?HiHoops_Email_Password}
