--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,10 +35,15 @@ application.langs="en"
 #
 
 
- db.default.driver=org.h2.Driver
- db.default.url="jdbc:h2:mem:play;MODE=MYSQL"
- db.default.user=user
- db.default.password=password
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play;MODE=MYSQL"
+#db.default.user=user
+#db.default.password=password
+ 
+ db.default.driver=com.mysql.jdbc.Driver
+ db.default.url="jdbc:"${DATABASE_URL_DB}
+ db.default.user=${DATABASE_USERNAME_DB}
+ db.default.password=${DATABASE_PASSWORD_DB}
 
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
