added slugify fields to all court pages, all pages now 404 when the wrong fields are input.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -81,5 +81,5 @@ hihoops.admin.password = ${?HIHOOPS_ADMIN_PASSWORD}
 smtp.host=smtp.gmail.com
 smtp.port=587
 smtp.ssl=yes
-smtp.user=${HiHoops_Email}
-smtp.password=${HiHoops_Email_Password}
+smtp.user=${HIHOOPS_EMAIL}
+smtp.password=${HIHOOPS_PASSWORD}
