--- a/conf/application.cloudbees.conf
+++ b/conf/application.cloudbees.conf
@@ -16,3 +16,8 @@ applyEvolutions.default=false
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
+
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:"${DATABASE_URL_DB}
+db.default.user=${DATABASE_USERNAME_DB}
+db.default.password=${DATABASE_PASSWORD_DB}
