Ch ch ch ch changes

--- a/conf/application.cloudbees.conf
+++ b/conf/application.cloudbees.conf
@@ -7,7 +7,7 @@ include "application.conf"
 # ~~~~~
 
 # Disable evolutions when using CloudBees
-evolutionplugin=disabled
+evolutionplugin=enabled
 applyEvolutions.default=false
 
 
