--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,16 +35,16 @@ application.langs="en"
 #
 
 
-#db.default.driver=org.h2.Driver
-#db.default.url="jdbc:h2:mem:play;MODE=MYSQL"
-#db.default.user=user
-#db.default.password=password
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play;MODE=MYSQL"
+db.default.user=user
+db.default.password=password
  
 
-db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:"${DATABASE_URL_DB}
-db.default.user=${DATABASE_USERNAME_DB}
-db.default.password=${DATABASE_PASSWORD_DB}
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.url="jdbc:"${DATABASE_URL_DB}
+#db.default.user=${DATABASE_USERNAME_DB}
+#db.default.password=${DATABASE_PASSWORD_DB}
 
 
 #
@@ -79,14 +79,16 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
-#hihoops.admin.email = "admin"
-#hihoops.admin.password = "password"
-hihoops.admin.email = ${?HIHOOPS_ADMIN_EMAIL}
-hihoops.admin.password = ${?HIHOOPS_ADMIN_PASSWORD}
+hihoops.admin.email = "admin"
+hihoops.admin.password = "password"
+#hihoops.admin.email = ${?HIHOOPS_ADMIN_EMAIL}
+#hihoops.admin.password = ${?HIHOOPS_ADMIN_PASSWORD}
 
 # Mailer:
 smtp.host=smtp.gmail.com
 smtp.port=587
 smtp.ssl=yes
-smtp.user=${HIHOOPS_EMAIL}
-smtp.password=${HIHOOPS_PASSWORD}
+smtp.user="andrewpw"
+smtp.password="password"
+#smtp.user=${HIHOOPS_EMAIL}
+#smtp.password=${HIHOOPS_PASSWORD}
